client/src/styles/_modal.scss
// ** Modal ** //
.backdrop {
  width: 100vw;
  height: 100vh;
  background-color: rgba(60, 60, 65, 0.5); //#242932bb;
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
}

.modal {
  display: none;
  background-color: #111;
  position: absolute;
  z-index: 200;
  margin: auto;
  min-width: 40rem;
  padding: 1.6rem;
}

.modal-header {
  display: flex;
  // justify-content: flex-end;
}

.modal-content {
  // width: 25rem;
  margin: 2.4rem 4rem 3.2rem 4rem;
}

.modal.open {
  display: block;
}

.close-modal-button {
  margin-left: auto;
  fill: #7d8cac;
  height: 2.2rem;
  transition: $fill-transition;
  &:hover {
    fill: #a7bbe2;
  }
}

.modal-title {
  margin-bottom: 4rem;
}

.modal .fields {
  margin-bottom: 4rem;
}

.modal .field {
  margin: 0 0 2.4rem 0;
  display: block;
  width: 100%;
}

.modal .field-label {
  text-align: left;
  font-size: 1.1rem;
  margin-bottom: 0.8rem;
}

// stop autocomplete from changing input background. leave my ui alone google
@-webkit-keyframes autofill {
  to {
    color: white;
    background: transparent;
  }
}
.modal .field-input {
  background-color: #171717;
  border: 0.1rem solid #252932;
  width: 100%;
  color: white;
  text-align: left;
  font-size: 1.6rem;
  padding: 0.8rem 1.2rem;
  transition: border-color 0.2s ease, padding 0.3s ease-out;

  &:-webkit-autofill {
    animation-name: autofill;
    animation-fill-mode: both;
    -webkit-animation-name: autofill;
    -webkit-animation-fill-mode: both;
  }
  &.dirty {
    background-color: #111;
    border-color: #111;
    padding-left: 0;
  }
  &::placeholder {
    color: #3a4150;
  }
  &:focus {
    border: 1px solid $primary-color;
    padding-left: 1.2rem;
  }
  //   margin-bottom: 25px;
}

.modal h4 {
  text-align: left;
}

.fields .input-subtext {
  font-size: 1.4rem;
  font-weight: 300;
  margin-top: 2.4rem;
  &:hover {
    color: $primary-color-light;
  }
}

.modal button {
  border-radius: none;
  width: 100%;
}

.modal .error-message {
  font-size: 1.2rem;
  margin-top: 0.6rem;
}

.modal .subtext {
  font-size: 1.2rem;
  font-weight: 400;
  margin-top: 2.4rem;
  .primary {
    &:hover {
      color: $primary-color-light;
    }
  }
}

@media (max-width: 400px) {
  .modal {
    min-width: 100%;
    min-height: 100%;
    padding: 1.2rem;
  }
  .modal-content {
    margin: 2.4rem 2.4rem;
  }
}

